# GoldNotesDefi

./: .gitignore  PHASE1_EXECUTION_REPORT.md  PHASE3_EXECUTION_REPORT.md  README.md  SECURITY_ROTATION_LOG.md  index.html  semi.md
.claude/: settings.json
PLAN/: DEMO_SCRIPT.md
PLAN/Future_Features/: w3b_liquid_staking_architecture.md
docs/: DEVNET_RESYNC_PLAN.md  PHASE_PLAN.md
docs/PLAN/: HACKATHON_SUBMISSION_BRIEF.md  HACKATHON_SUBMISSION_CHECKLIST.md
mobile-app/: .easignore  .env.example  .env.production.example  .env.staging.example  .gitignore  App.tsx  README.md  app.json  eas.json  index.js  package-lock.json  package.json  tsconfig.json
mobile-app/android/: keystore.properties.example  settings.gradle
mobile-app/docs/: DEPLOYMENT_RUNBOOK.md  (+4 more)
my-app/: CLAUDE.md  DEPLOYMENT.md  debug-stock.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  supabase_bucket_setup.sql  test-update-stock.ts  vercel.json
privacy-cash-backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: find-not-in-path.sh
w3b-token/: .env.example  .gitignore  LICENSE  run_demo.sh
w3b-token/programs/w3b_protocol/programs/w3b_protocol/: Cargo.toml
w3b-token/programs/w3b_protocol/programs/w3b_protocol/src/: lib.rs
w3b-token/programs/wgb_staking/programs/wgb_staking/: Cargo.toml
w3b-token/programs/wgb_staking/programs/wgb_staking/src/: errors.rs  lib.rs  state.rs
w3b-token/programs/wgb_staking/programs/wgb_staking/src/instructions/: deposit.rs  initialize_pool.rs  inject_yield.rs  mod.rs  withdraw.rs
(+237 files in other folders)
