[package]
name = "wgb_staking"
version = "0.1.0"
description = "WGB Liquid Staking Protocol — stake WGB, receive stWGB"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wgb_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
constant_time_eq = "=0.3.1"
